@@ -1,3 +1,5 @@
+- Fixed font-style display in some emails
+
 23-01-2015 6.1.17
 - Export timeregistration error fixed
 - Include ID's in columns for export
